cluster/apps/proxmox/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-svc
subsets:
  - addresses:
      - ip: 192.168.200.30
    ports:
      - name: https
        port: 8006
        protocol: TCP
