cluster/apps/proxmox/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox
  labels:
    app.kubernetes.io/name: proxmox
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`proxmox.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: headers@file
        - name: local-only@file
      services:
        - name: proxmox-svc
          port: 8006
          namespace: default
          serversTransport: proxmox
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
